--- a/zoomcamp/hw2.ipynb
+++ b/zoomcamp/hw2.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('AB_NYC_2019.csv')"
+    "df=pd.read_csv('AB_NYC_2019.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +50,7 @@
        "Name: reviews_per_month, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +70,513 @@
        "3.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['minimum_nights'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df['reviews_per_month'] = df['reviews_per_month'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df['reviews_per_month'] = df['reviews_per_month'].fillna(df['reviews_per_month'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_linear_regression(X, y):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones, X])\n",
+    "\n",
+    "    XTX = X.T.dot(X)\n",
+    "    XTX_inv = np.linalg.inv(XTX)\n",
+    "    w_full = XTX_inv.dot(X.T).dot(y)\n",
+    "    \n",
+    "    return w_full[0], w_full[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_linear_regression_reg(X, y, r=0.001):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones, X])\n",
+    "\n",
+    "    XTX = X.T.dot(X)\n",
+    "    XTX = XTX + r * np.eye(XTX.shape[0])\n",
+    "\n",
+    "    XTX_inv = np.linalg.inv(XTX)\n",
+    "    w_full = XTX_inv.dot(X.T).dot(y)\n",
+    "    \n",
+    "    return w_full[0], w_full[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rmse(y, y_pred):\n",
+    "    se = (y - y_pred) ** 2\n",
+    "    mse = se.mean()\n",
+    "    return np.sqrt(mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "def train_model(df_input,seed_value =42, r=None):\n",
+    "    df = df_input.sample(frac=1,random_state=seed_value)\n",
+    "    train,test = train_test_split(df,test_size=0.4)\n",
+    "    test,val = train_test_split(test,test_size=0.5)\n",
+    "\n",
+    "    columns = ['latitude',\n",
+    "        'longitude',\n",
+    "        'minimum_nights',\n",
+    "        'number_of_reviews',\n",
+    "        'reviews_per_month',\n",
+    "        'calculated_host_listings_count',\n",
+    "        'availability_365'\n",
+    "          ]\n",
+    "    X_train = train[columns]\n",
+    "    X_test = test[columns]\n",
+    "    X_val = val[columns]\n",
+    "    y_train = np.log1p(train['price'])\n",
+    "    y_test = np.log1p(test['price'])\n",
+    "    y_val = np.log1p(val['price'])\n",
+    "    \n",
+    "    \n",
+    "    X_train['reviews_per_month'] = X_train['reviews_per_month'].fillna(0)\n",
+    "    X_val['reviews_per_month'] = X_val['reviews_per_month'].fillna(0)\n",
+    "    \n",
+    "    if r:\n",
+    "        w0, w = train_linear_regression_reg(X_train, y_train,r)\n",
+    "    else:\n",
+    "        w0, w = train_linear_regression(X_train, y_train)\n",
+    "    y_pred = w0 + X_val.dot(w)\n",
+    "    return round(rmse(y_val,y_pred),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rajagopal/mlenv/lib/python3.6/site-packages/ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/Users/rajagopal/mlenv/lib/python3.6/site-packages/ipykernel_launcher.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -> 0.65\n",
+      "1e-06 -> 0.64\n",
+      "0.0001 -> 0.64\n",
+      "0.001 -> 0.64\n",
+      "0.01 -> 0.67\n",
+      "0.1 -> 0.69\n",
+      "1 -> 0.69\n",
+      "5 -> 0.69\n",
+      "10 -> 0.69\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse_list=[]\n",
+    "for r in [0, 0.000001, 0.0001, 0.001, 0.01, 0.1, 1, 5, 10]:\n",
+    "    rmse_r = train_model(df,r=r)\n",
+    "    rmse_list.append(rmse_r)\n",
+    "    print(r,'->',rmse_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rajagopal/mlenv/lib/python3.6/site-packages/ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/Users/rajagopal/mlenv/lib/python3.6/site-packages/ipykernel_launcher.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse_list=[]\n",
+    "for seed in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]:\n",
+    "    rmse_r = train_model(df,seed_value=seed)\n",
+    "    rmse_list.append(rmse_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.006633249580710806"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(rmse_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rajagopal/mlenv/lib/python3.6/site-packages/ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/Users/rajagopal/mlenv/lib/python3.6/site-packages/ipykernel_launcher.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/Users/rajagopal/mlenv/lib/python3.6/site-packages/ipykernel_launcher.py:23: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_new = df.sample(frac=1,random_state=9)\n",
+    "train,test = train_test_split(df_new,test_size=0.4)\n",
+    "test,val = train_test_split(test,test_size=0.5)\n",
+    "\n",
+    "columns = ['latitude',\n",
+    "    'longitude',\n",
+    "    'minimum_nights',\n",
+    "    'number_of_reviews',\n",
+    "    'reviews_per_month',\n",
+    "    'calculated_host_listings_count',\n",
+    "    'availability_365'\n",
+    "      ]\n",
+    "X_train = train[columns]\n",
+    "X_test = test[columns]\n",
+    "X_val = val[columns]\n",
+    "y_train = np.log1p(train['price'])\n",
+    "y_test = np.log1p(test['price'])\n",
+    "y_val = np.log1p(val['price'])\n",
+    "\n",
+    "\n",
+    "X_train['reviews_per_month'] = X_train['reviews_per_month'].fillna(0)\n",
+    "X_val['reviews_per_month'] = X_val['reviews_per_month'].fillna(0)\n",
+    "X_test['reviews_per_month'] = X_test['reviews_per_month'].fillna(0)\n",
+    "\n",
+    "X=X_train.append(X_val)\n",
+    "y=y_train.append(y_val)\n",
+    "\n",
+    "\n",
+    "w0, w = train_linear_regression_reg(X, y,0.001)\n",
+    "y_pred = w0 + X_test.dot(w)\n",
+    "round(rmse(y_test,y_pred),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>availability_365</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42720</th>\n",
+       "      <td>40.71829</td>\n",
+       "      <td>-73.98900</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41538</th>\n",
+       "      <td>40.79795</td>\n",
+       "      <td>-73.93448</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27899</th>\n",
+       "      <td>40.68637</td>\n",
+       "      <td>-73.91159</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>8</td>\n",
+       "      <td>177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35531</th>\n",
+       "      <td>40.85409</td>\n",
+       "      <td>-73.85032</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35745</th>\n",
+       "      <td>40.77089</td>\n",
+       "      <td>-73.93036</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37587</th>\n",
+       "      <td>40.72994</td>\n",
+       "      <td>-74.00456</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21342</th>\n",
+       "      <td>40.77103</td>\n",
+       "      <td>-73.91409</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6247</th>\n",
+       "      <td>40.73351</td>\n",
+       "      <td>-73.95459</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46535</th>\n",
+       "      <td>40.76650</td>\n",
+       "      <td>-73.98673</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39972</th>\n",
+       "      <td>40.75094</td>\n",
+       "      <td>-73.98100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>39116 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       latitude  longitude  minimum_nights  number_of_reviews  \\\n",
+       "42720  40.71829  -73.98900               2                  4   \n",
+       "41538  40.79795  -73.93448               2                 20   \n",
+       "27899  40.68637  -73.91159               2                 19   \n",
+       "35531  40.85409  -73.85032               5                  8   \n",
+       "35745  40.77089  -73.93036               1                  3   \n",
+       "...         ...        ...             ...                ...   \n",
+       "37587  40.72994  -74.00456               3                  2   \n",
+       "21342  40.77103  -73.91409               2                  6   \n",
+       "6247   40.73351  -73.95459               3                  0   \n",
+       "46535  40.76650  -73.98673               2                  1   \n",
+       "39972  40.75094  -73.98100               1                  0   \n",
+       "\n",
+       "       reviews_per_month  calculated_host_listings_count  availability_365  \n",
+       "42720               1.54                               1                 3  \n",
+       "41538               4.38                               1                52  \n",
+       "27899               1.03                               8               177  \n",
+       "35531               0.87                               5                22  \n",
+       "35745               0.30                               1                 0  \n",
+       "...                  ...                             ...               ...  \n",
+       "37587               0.29                               1                 0  \n",
+       "21342               0.21                               1               176  \n",
+       "6247                0.00                               2               280  \n",
+       "46535               1.00                               1                35  \n",
+       "39972               0.00                               1               365  \n",
+       "\n",
+       "[39116 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -> 0.64\n",
+      "1e-06 -> 0.64\n",
+      "0.0001 -> 0.64\n",
+      "0.001 -> 0.64\n",
+      "0.01 -> 0.65\n",
+      "0.1 -> 0.67\n",
+      "1 -> 0.68\n",
+      "5 -> 0.68\n",
+      "10 -> 0.68\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.018121673811444562"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(rmse_list)"
    ]
   }
  ],
